--- a/src/css/master.css
+++ b/src/css/master.css
@@ -1,10 +1,10 @@
 /* start global element */
 :root {
     --transition: 0.3s;
-    --green-color: #17a3a3;
+    --green-color: rgb(0, 148, 148);
     --orange-color: #c07505;
     --blue-color: #297dcc;
-    --alt-green-color: darkcyan;
+    --alt-green-color: rgb(1, 102, 102);
     --red-color: #c33c3c;
     --grey-color: #888;
     --border-color: #ccc;
